<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/buttonCE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonResetCaption"/>
        <Button
            android:id="@+id/buttonPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonPercentCaption"/>
        <Button
            android:id="@+id/buttonSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonSignCaption"/>
        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonPlusCaption" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button1Caption"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button2Caption"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button3Caption"/>
        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonMinusCaption"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button4Caption"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button5Caption"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button6Caption"/>
        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonMultiplyCaption"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button7Caption"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button8Caption"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button9Caption"/>
        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonDivideCaption"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button0Caption"/>
        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/buttonMarginRight"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonPointCaption"/>
        <Button
            android:id="@+id/buttonEqually"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span = "2"
            android:paddingTop="@dimen/buttonPaddingTop"
            android:paddingBottom="@dimen/buttonPaddingBottom"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/buttonEquallyCaption"/>


    </TableRow>
</TableLayout>